# Libft

./: .editorconfig  .travis.yml  CMakeLists.txt  Makefile  README.md  UT_nico  changelog.md  ft_abs.c  ft_atoi.c  ft_btw.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstaddbk.c  ft_lstat.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  (+63 more)
docs/: changelog.md
includes/: ft_conv.h  ft_printf.h  ftbtree.h  ftconvert.h  ftctype.h  fterror.h  ftgnl.h  ftio.h  ftlist.h  ftmath.h  ftmem.h  ftstring.h  get_next_line.h  libft.h  lifetime.h  livetime.h  option.h  parse_txt.h
printf2/: Makefile  author  digits_precision.c  ft_atoi.c  ft_bzero.c  ft_itoa.c  ft_memset.c  ft_printf.h  ft_putchar.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strlen.c  ft_strnew.c  libft.h  main.c  path.c  pick_f_base.c  pick_f_bigs.c  pick_f_c.c  pick_f_d.c  pick_f_p.c  pick_f_s.c  pick_f_w.c  precision.c  printf.c  string.c  to_base.c  toolbox.c
srcs/: digits_precision.c  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_btw.c  ft_bzero.c  ft_clamp.c  ft_curr_usec.c  ft_dtoa.c  ft_error.c  ft_fopen_read.c  ft_gnl.c  ft_isgraph.c  ft_itoa.c  ft_itoa_base.c  ft_line_count.c  ft_lltoa.c  ft_lstget.c  ft_lstgetelt.c  ft_lstiteri.c  ft_lstlen.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memrcpy.c  ft_new_err.c  ft_options.c  ft_print_memory.c  ft_print_value.c  ft_printf.c  ft_printf_conv1.c  ft_printf_conv2.c  ft_printf_prec1.c  ft_putchar.c  ft_putctab.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  (+48 more)
srcs/btree/: ft_b3add_left.c  ft_b3add_right.c  ft_b3apply_infix.c  ft_b3apply_prefix.c  ft_b3apply_suffix.c  ft_b3del.c  ft_b3new.c
srcs/convert/: ft_atoi_base.c
srcs/ctype/: ft_isnumber.c
srcs/io/: ft_error.c  ft_fopen_read.c  ft_gnl.c
srcs/list/: ft_lstaddendnew.c  ft_lstapply.c  ft_lstat.c  ft_lstgetelt.c  ft_lstgetidx.c  ft_lstgetnode.c  ft_lstiter_arg.c  ft_lstmovedown.c  ft_lstmoveup.c  ft_lstnew.c  ft_lstpop.c  ft_lstpushnew.c  ft_lstsort.c  ft_lstswap.c
srcs/math/: ft_btwf.c  ft_minf.c
srcs/memory/: ft_bzero.c  ft_memdup.c
srcs/printf/: ft_printf.c
srcs/string/: ft_strcapitalize.c  ft_strcasecmp.c  ft_strcasestr.c  ft_strchr.c  ft_strclr.c  ft_strjoini.c  ft_strlcpy.c  ft_strlowcase.c  ft_strncasecmp.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnequ.c  ft_strnew.c  ft_strnstr.c  ft_strstr.c  ft_strsubfree.c  ft_strtrim.c
tests/: TU_lifetime.c  TU_livetime.c  ut_atof.c  ut_btree.c  ut_bzero.c  ut_gnl.c  ut_lifetime.c
