cmake_minimum_required(VERSION 3.13)
project(ft C)

add_library(ft "")

target_include_directories(ft PUBLIC includes)

target_sources(ft PRIVATE
        srcs/btree/ft_b3add_left.c
        srcs/btree/ft_b3add_right.c
        srcs/btree/ft_b3apply_infix.c
        srcs/btree/ft_b3apply_prefix.c
        srcs/btree/ft_b3apply_suffix.c
        srcs/btree/ft_b3del.c
        srcs/btree/ft_b3new.c
        srcs/convert/ft_atof.c
        srcs/convert/ft_atoi.c
        srcs/convert/ft_atoi_base.c
        srcs/convert/ft_dtoa.c
        srcs/convert/ft_itoa.c
        srcs/convert/ft_itoa_base.c
        srcs/convert/ft_lltoa.c
        srcs/convert/ft_lltoa_base.c
        srcs/convert/ft_tolower.c
        srcs/convert/ft_toupper.c
        srcs/ctype/ft_isalnum.c
        srcs/ctype/ft_isalpha.c
        srcs/ctype/ft_isascii.c
        srcs/ctype/ft_isblank.c
        srcs/ctype/ft_iscntrl.c
        srcs/ctype/ft_isdigit.c
        srcs/ctype/ft_isgraph.c
        srcs/ctype/ft_islower.c
        srcs/ctype/ft_isnumber.c
        srcs/ctype/ft_isprint.c
        srcs/ctype/ft_isspace.c
        srcs/ctype/ft_isupper.c
        srcs/ctype/ft_isxdigit.c
        srcs/io/ft_error.c
        srcs/io/ft_fopen_read.c
        srcs/io/ft_gnl.c
        srcs/io/ft_print_value.c
        srcs/io/ft_putchar.c
        srcs/io/ft_putchar_fd.c
        srcs/io/ft_putctab.c
        srcs/io/ft_putendl.c
        srcs/io/ft_putendl_fd.c
        srcs/io/ft_putnbr.c
        srcs/io/ft_putnbr_base.c
        srcs/io/ft_putnbr_base_low.c
        srcs/io/ft_putnbr_fd.c
        srcs/io/ft_puttab.c
        srcs/list/ft_lstadd.c
        srcs/list/ft_lstaddbk.c
        srcs/list/ft_lstat.c
        srcs/list/ft_lstdel.c
        srcs/list/ft_lstdelone.c
        srcs/list/ft_lstget.c
        srcs/list/ft_lstgetelt.c
        srcs/list/ft_lstgetnode.c
        srcs/list/ft_lstiter.c
        srcs/list/ft_lstiteri.c
        srcs/list/ft_lstiter_arg.c
        srcs/list/ft_lstlast.c
        srcs/list/ft_lstlen.c
        srcs/list/ft_lstmap.c
        srcs/list/ft_lstnew.c
        srcs/list/ft_lstpushnew.c
        srcs/list/ft_lstrev.c
        srcs/math/ft_abs.c
        srcs/math/ft_absf.c
        srcs/math/ft_btw.c
        srcs/math/ft_clamp.c
        srcs/math/ft_clampf.c
        srcs/math/ft_max.c
        srcs/math/ft_maxf.c
        srcs/math/ft_min.c
        srcs/math/ft_minf.c
        srcs/memory/ft_bzero.c
        srcs/memory/ft_memalloc.c
        srcs/memory/ft_memccpy.c
        srcs/memory/ft_memchr.c
        srcs/memory/ft_memcmp.c
        srcs/memory/ft_memcpy.c
        srcs/memory/ft_memdel.c
        srcs/memory/ft_memmove.c
        srcs/memory/ft_memrcpy.c
        srcs/memory/ft_memset.c
        srcs/memory/ft_print_memory.c
        srcs/memory/ft_safe_alloc.c
        srcs/printf/ft_printf.c
        srcs/printf/ft_printf_conv1.c
        srcs/printf/ft_printf_conv2.c
        srcs/printf/ft_printf_prec1.c
        srcs/string/ft_putstr.c
        srcs/string/ft_putstr_fd.c
        srcs/string/ft_str_is_alpha.c
        srcs/string/ft_str_is_lowercase.c
        srcs/string/ft_str_is_numeric.c
        srcs/string/ft_str_is_printable.c
        srcs/string/ft_str_is_uppercase.c
        srcs/string/ft_strcapitalize.c
        srcs/string/ft_strcasecmp.c
        srcs/string/ft_strcasestr.c
        srcs/string/ft_strcat.c
        srcs/string/ft_strchr.c
        srcs/string/ft_strclen.c
        srcs/string/ft_strclr.c
        srcs/string/ft_strcmp.c
        srcs/string/ft_strcpy.c
        srcs/string/ft_strdel.c
        srcs/string/ft_strdup.c
        srcs/string/ft_strequ.c
        srcs/string/ft_striter.c
        srcs/string/ft_striteri.c
        srcs/string/ft_strjoin.c
        srcs/string/ft_strjoinfree.c
        srcs/string/ft_strlcat.c
        srcs/string/ft_strlcpy.c
        srcs/string/ft_strlen.c
        srcs/string/ft_strlowcase.c
        srcs/string/ft_strmap.c
        srcs/string/ft_strmapi.c
        srcs/string/ft_strncasecmp.c
        srcs/string/ft_strncat.c
        srcs/string/ft_strncmp.c
        srcs/string/ft_strncpy.c
        srcs/string/ft_strndup.c
        srcs/string/ft_strnequ.c
        srcs/string/ft_strnew.c
        srcs/string/ft_strnstr.c
        srcs/string/ft_strpbrk.c
        srcs/string/ft_strrchr.c
        srcs/string/ft_strsplit.c
        srcs/string/ft_strstr.c
        srcs/string/ft_strsub.c
        srcs/string/ft_strsubfree.c
        srcs/string/ft_strtrim.c
        srcs/string/ft_strupcase.c
        srcs/string/ft_wordcount.c
        srcs/ft_curr_usec.c
        srcs/ft_line_count.c
        srcs/ft_options.c
        srcs/ft_swap.c
        srcs/ft_swapf.c
        srcs/ft_tabdel.c
        srcs/ft_tablen.c
        srcs/lifetime.c)
